# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "gonana_staking_smart_contract"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = [ "timadigwe <timothyadigwe2019@gmail.com>" ]
description = "staking smart contract for the gonana marketplace"

[features]
default = ["std"]
std = ["concordium-std/std"]
wee_alloc = ["concordium-std/wee_alloc"]

[dependencies]
concordium-std = {version = "8.1", default-features = false}
concordium-cis2 = {version = "5.1.0", default-features = false}
chrono = "0.4.2"

[dev-dependencies]
concordium-smart-contract-testing = "3"

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
